# lhcb

./: .gitignore  README.md
alps/davinci/: Ntuple.py  davinci.py  ganga.py  getLFN.sh  getLFNs.py  getLFNsParallel.sh
alps/skim/: EffSkimmer.C  EffSkimmer.h  Makefile  SimSkimmer.C  SimSkimmer.h  TreeSkimmer.C  TreeSkimmer.h  addMConstr.C  applyTMVA.C  skim.sh  skimMC.sh  skimMCParallel.sh  skimParallel.sh
cep/davinci/: DV_PbPb_new.py  DV_WS.py  DV_pPb16.py  DV_pPb2phi.py  DV_pPb_WS.py  DV_pPb_new.py  DV_phi.py  DV_pp15.py  DV_pp16.py  Ntuple.py  davinci-MC.py  davinci-pPb.py  davinci.py  ganga-MC.py  ganga-PbPb.py  ganga-pPb-ws.py  ganga-pPb.py  ganga-pp-ws.py  ganga-pp.py  ganga.py  getLFNMC.sh  getLFNsMC.sh
cep/fit/: doFits.C  doFits.h
cep/skim/: Makefile  addPtEffWeight.C  doSkim.sh  doSkimMC.sh  skim.C  skim.h  skimMC.C  skimMC.h  skimMCParallel.sh  skimParallel.sh
jets/davinci/: Ntuple.py  Run2Jets.py  Run2Jets_DMC.py  Run2Jets_JMC.py  Run2Jets_JMC_back.py  Run2Jets_ZMC.py  Run2Jets_data.py  Run2Jets_dijet.py  Run2Jets_dijet17.py  Run2Jets_dijet17_back.py  Run2Jets_dijet18.py  Run2Jets_dijet18_back.py  Run2Jets_dijet_back.py  Run2Jets_jpsijet.py  Run2Jets_jpsijet17.py  Run2Jets_jpsijet18.py  Run2Jets_wjet.py  Run2Jets_wjet15.py  Run2Jets_wjet15_back.py  Run2Jets_wjet17.py  Run2Jets_wjet17_back.py  Run2Jets_wjet18.py  Run2Jets_wjet18_back.py  Run2Jets_wjet_back.py  Run2Jets_zjet.py  Run2Jets_zjet15.py  (+29 more)
jets/davinci/Phys/JetTagging/: CMakeLists.txt
jets/davinci/Phys/JetTagging/src/: LoKiBDTTag.cpp  LoKiBDTTag.h
prepPaper/: figs.py  inputs.py  prepPaper.sh
(+371 files in other folders)
